# perry

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  NM_DEVIRT_PLAN.md  README.md  TYPE_LOWERING.md  deny.toml  package-lock.json  package.json  run_parity_tests.sh  vendor  workspace-architecture.json
benchmarks/: README.md  benchmark_gate.py  ci_public_baseline_check.py  compare.sh  public_baseline.py  run_public_baseline.sh
changelog.d/: 6754-workspace-lints.md  6758-workspace-architecture.md  6760-merge-types-into-hir.md  6761-multiplatform-workspace.md  6785-fs-promises-parity.md  6786-http2-request-session-order.md  6787-path-matches-glob-feature.md  6788-named-callable-length.md  6789-form-data-constructor-length.md  6790-net-connection-state.md  6791-readline-interface-properties.md  6792-util-isarray-arity.md  6794-untyped-param-masked-window.md  6795-runtime-state-phase-a.md  6796-object-meta-phase-b.md  6797-shape-records-phase-c1.md  6800-object-meta-descriptor-summaries-phase-c2.md  6801-stable-shape-identity-phase-c3a.md  6802-inline-guard-per-key-c5a.md  6803-header-shape-id-c3c-r.md  6805-test-reset-c5a-sets.md  6807-eager-shape-stamping.md  6808-pic-shape-id-compare.md  6810-aot-runtime-fast-paths.md  6811-object-write-fast-paths.md  6812-immutable-string-key-loop-pic.md  6812-object-write-loop-generalization.md  6812-polymorphic-write-pic.md  README.md
crates/perry-audio-miniaudio/: Cargo.toml  build.rs
crates/perry-audio-miniaudio/src/: lib.rs
crates/perry-container-compose/: Cargo.toml
crates/perry-container-compose/src/: backend.rs  compose.rs  ffi.rs  types.rs
crates/perry-container-compose/src/backend/: cli_backend.rs
crates/perry-container-compose/src/testing/: mock_backend.rs
crates/perry-container-compose/tests/: orchestration.rs  types_tests.rs
crates/perry-container-compose/tests/common/: mod.rs
crates/perry-diagnostics/: Cargo.toml
crates/perry-diagnostics/src/: diagnostic.rs
crates/perry-ext-ads/: Cargo.toml
crates/perry-ext-argon2/: Cargo.toml
crates/perry-ext-argon2/src/: lib.rs
crates/perry-ext-axios/: Cargo.toml
crates/perry-ext-bcrypt/: Cargo.toml
crates/perry-ext-bcrypt/src/: lib.rs
crates/perry-ext-better-sqlite3/: Cargo.toml
crates/perry-ext-better-sqlite3/src/: lib.rs
crates/perry-ext-cheerio/: Cargo.toml
crates/perry-ext-cheerio/src/: lib.rs
crates/perry-ext-commander/: Cargo.toml
crates/perry-ext-dayjs/: Cargo.toml
crates/perry-ext-dayjs/src/: lib.rs
crates/perry-ext-decimal/: Cargo.toml
crates/perry-ext-decimal/src/: lib.rs
crates/perry-ext-ethers/: Cargo.toml
crates/perry-ext-exponential-backoff/: Cargo.toml
crates/perry-ext-exponential-backoff/src/: lib.rs
crates/perry-ext-fastify/: Cargo.toml
crates/perry-ext-fastify/src/: app.rs  cluster_bind.rs  context.rs  lib.rs  router.rs  server.rs  upgrade.rs
crates/perry-ext-fetch/: Cargo.toml
crates/perry-ext-fetch/src/: lib.rs  tests.rs
crates/perry-ext-http/: Cargo.toml
crates/perry-ext-http-server/: Cargo.toml
crates/perry-ext-http-server/src/: cluster_bind.rs  dispatch_ext.rs  handle_dispatch.rs  http2_server.rs  https_server.rs  lib.rs  raw_upgrade.rs  request.rs  response.rs  response_tests.rs  server.rs  tls.rs  types.rs  upgrade.rs
crates/perry-ext-http-server/src/http2_server/: pump.rs  session.rs
crates/perry-ext-http-server/src/server/: in_flight.rs
crates/perry-ext-http/src/: agent.rs  client_dispatch.rs  client_events.rs  client_outgoing.rs  client_overload.rs  client_request_surface.rs  continue_client.rs  force_link.rs  lib.rs  tests.rs  tls_client.rs  transport_error.rs
crates/perry-ext-jsonwebtoken/: Cargo.toml
crates/perry-ext-lru-cache/: Cargo.toml
crates/perry-ext-lru-cache/src/: lib.rs
crates/perry-ext-moment/: Cargo.toml
crates/perry-ext-moment/src/: lib.rs
crates/perry-ext-mongodb/: Cargo.toml
crates/perry-ext-mongodb/src/: lib.rs
crates/perry-ext-mysql2/: Cargo.toml
crates/perry-ext-mysql2/src/: lib.rs
crates/perry-ext-net/: Cargo.toml
crates/perry-ext-net/src/: adopt.rs  classes.rs  dispatch.rs  handle_ids.rs  jsvalue.rs  lib.rs  lifecycle.rs  nodelay_tests.rs  option_setters.rs  server_state.rs
crates/perry-ext-pdf/: Cargo.toml
crates/perry-ext-pdf/src/: lib.rs
crates/perry-ext-ratelimit/: Cargo.toml
crates/perry-ext-ratelimit/src/: lib.rs
crates/perry-ext-sharp/: Cargo.toml
crates/perry-ext-sharp/src/: lib.rs
crates/perry-ext-slugify/: Cargo.toml
crates/perry-ext-slugify/src/: lib.rs
crates/perry-ext-streams/: Cargo.toml
crates/perry-ext-uuid/: Cargo.toml
crates/perry-ext-uuid/src/: lib.rs
docs/: book.toml  runtime-parity-gaps.md  runtime-parity.md  shape-tree-plan.md
examples/: issue_582_demo.ts  windows_ui_demo.ts
packaging/: install.sh
scripts/: addr_class_allowlist.txt  addr_class_inventory.py  addr_class_ratchet_baseline.txt  check_file_size.sh  check_runtime_symbols.sh  ci_e2e_scope.py  ci_test_scope.py  copied_minor_fallback_report.py  cut_release_notes.sh  fp_fuzz.mjs  gc_1090_evidence_packet.sh  gc_1090_evidence_report.py  gc_store_site_inventory.py  gen_parity_gaps.py  gen_parity_tests.py  native_abi_evidence_packet.sh  native_abi_evidence_report.py  node_core_subset.py  node_suite_regression_check.py  node_suite_run.py  parity_matrix_trend.py  regen_api_docs.sh  release_sweep.ps1  release_sweep.sh  run_android_emu_tests.sh  run_gap_tests.sh  run_issue_945_scalar_method_ir_guard.sh  run_memory_stability_tests.sh  run_simctl_tests.sh  run_thread_tests.sh  run_tty_pty_smoke.sh  smoke_windows_app.ps1  test262_subset.py  workspace_architecture.py
test-coverage/: COVERAGE.md
test-files/: ajv_user_validator.generated.cjs  cluster_4962.ts  dynamic_import_chunk_agent.ts  dynamic_import_chunk_shared.ts  dynamic_import_chunk_worker.ts  namespace_reexport_barrel.ts  namespace_reexport_selfns.ts  run_test_issue_1088.sh  run_test_issue_1193.sh  test_603_smartrouter_mock.ts  test_603_sr_loop.ts  test_628_dyn.ts  test_ajv_standalone.ts  test_better_sqlite3_v8_bridge.ts  test_buffer_prototype_methods.ts  test_class_field_loop_versioned.ts  (+328 more)
(+3712 files in other folders)
