[package]
name = "perry-audio-miniaudio"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared miniaudio-backed perry/audio backend for Linux, Windows, and Android (#1867)."

[lints]
workspace = true

[lib]
crate-type = ["rlib"]

[build-dependencies]
cc = "1"

[target.'cfg(any(target_os = "linux", target_os = "windows", target_os = "android"))'.dependencies]
libc.workspace = true
