[package]
name = "perry-container-compose"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors = ["Perry Contributors"]
description = "Port of container-compose/cli to Rust - Docker Compose-like experience for Apple Container / Podman"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
md-5 = "0.11"
hex.workspace = true
dotenvy = { workspace = true }
indexmap = { version = "2.2", features = ["serde"] }
dashmap.workspace = true
rand = "0.8"
regex.workspace = true
atty = "0.2"
dialoguer = "0.11"
console = "0.16"
once_cell.workspace = true
which = "8.0"

[dev-dependencies]
tokio = { workspace = true }
proptest = "1"

[features]
default = []
ffi = []  # Enable FFI exports for Perry TypeScript integration (legacy YAML-path shape;
          # do NOT combine with perry-stdlib container feature — would link-collide)
# Live-runtime integration tests (require a real OCI runtime). The
# functional tests under tests/functional_orchestration.rs need
# `MockBackend` exposed, so this implies `test-utils`.
integration-tests = ["test-utils"]
test-utils = []  # Expose `pub mod testing` (mock backend) outside of test builds

[[bin]]
name = "perry-compose"
path = "src/main.rs"
