[package]
name = "perry-diagnostics"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Diagnostic infrastructure for the Perry TypeScript compiler"

[lints]
workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
serde_json.workspace = true
