[package]
name = "perry-ext-argon2"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native bindings for the npm `argon2` package — uses only `perry-ffi`. Sixth port under #466 Phase 5."

[lints]
workspace = true

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
perry-ffi.workspace = true
argon2 = "0.5"

[dev-dependencies]
perry-ffi = { workspace = true, features = ["runtime-link"] }
