[package]
name = "perry-ext-axios"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native bindings for the npm `axios` HTTP client — uses only `perry-ffi`. First HTTP-client port (Phase 5 step 13)."

[lints]
workspace = true

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
perry-ffi.workspace = true
reqwest = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
perry-ffi = { workspace = true, features = ["runtime-link"] }
