[package]
name = "perry-ext-dayjs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native bindings for npm `dayjs` / `date-fns` — uses only `perry-ffi`. Sync, handle-based date arithmetic via `chrono`."

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
perry-ffi.workspace = true
chrono = "0.4"
