[package]
name = "perry-ext-dayjs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native bindings for npm `dayjs` / `date-fns` — uses only `perry-ffi`. Sync, handle-based date arithmetic via `chrono`."

[lints]
workspace = true

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
perry-ffi.workspace = true
chrono.workspace = true

[dev-dependencies]
perry-ffi = { workspace = true, features = ["runtime-link"] }
