[package]
name = "perry-ext-exponential-backoff"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native bindings for npm `exponential-backoff` — uses only `perry-ffi`. Acceptance test for perry-ffi's closure invocation surface (Phase 5 step 12)."

[lints]
workspace = true

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
perry-ffi.workspace = true

[dev-dependencies]
perry-ffi = { workspace = true, features = ["runtime-link"] }
