[package]
name = "perry-ext-fastify"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native bindings for the npm `fastify` HTTP server framework — hyper-based router with Hono-style request/reply context. Uses only `perry-ffi`."

[lints]
workspace = true

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
perry-ffi.workspace = true
# #1113: cross-crate WS upgrade handoff. perry-ext-ws exposes
# `register_external_ws_stream<S>(WebSocketStream<S>) -> i64`; we call
# it from upgrade::handle_fastify_websocket_upgrade so the fastify
# `app.server.on("upgrade", …)` path produces a ws_id usable through
# the rest of the perry-ext-ws FFI surface. Mirrors the proven
# perry-ext-http-server (#577 Phase 4) dependency.
perry-ext-ws = { path = "../perry-ext-ws" }
hyper = { version = "1.4", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["server", "server-auto", "tokio"] }
http-body-util = "0.1"
bytes.workspace = true
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
serde_json.workspace = true
lazy_static.workspace = true

# #cluster — SO_REUSEPORT bind for `cluster.fork()` workers (unix only),
# mirroring perry-ext-http-server's cluster_bind. The
# `perry_cluster_worker_listening` symbol it reports to resolves at final link
# (defined in perry-runtime), like perry-ffi's runtime helpers — no Cargo dep on
# perry-runtime is needed.
[target.'cfg(unix)'.dependencies]
socket2 = "0.6"

[dev-dependencies]
perry-ffi = { workspace = true, features = ["runtime-link"] }
# #6303: perry-runtime MUST be built here with the same feature set the shipped
# `libperry_runtime.a` / `libperry_stdlib.a` carry (i.e. its `default`). This crate
# is a `staticlib`, so it BUNDLES the perry-runtime rlib objects into
# `libperry_ext_*.a` — and perry links the ext archives BEFORE stdlib/runtime
# (`prefer_well_known_before_stdlib`), so those bundled objects WIN the link for
# every symbol they define. The workspace dep is `default-features = false`, so
# without `"default"` here a per-crate `cargo build -p perry-ext-<x>` (exactly what
# release-packages.yml does in its per-crate loop) bundles a runtime with
# `regex-engine`/`temporal`/... compiled OUT. The dispatchers those features gate
# are exported UNCONDITIONALLY (`js_string_replace_search_dyn`,
# `js_native_call_method`, ...) with the feature-gated logic `#[cfg]`-ed out of the
# BODY — so the degraded copy silently ToString-coerces a RegExp argument and
# searches for it literally instead of matching it (str.replace(re, fn) never fires
# its callback). Keep `"default"` in lock-step with perry-runtime's default feature
# list; the `ext_crates_bundle_a_full_featured_perry_runtime` test (well_known.rs) guards it.
# `stdlib` drops the bundled no-op stdlib_stubs (js_stdlib_init_dispatch, ...) so
# they don't shadow perry-stdlib's real symbols when this staticlib is linked
# before stdlib (#6314). `external-ws-symbols` additionally suppresses the ws
# stubs (redundant under `stdlib`, kept to document intent).
perry-runtime = { workspace = true, features = ["default", "external-ws-symbols", "stdlib"] }
