[package]
name = "perry-ext-http-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native bindings for Node.js's `node:http`, `node:https`, and `node:http2` server modules — hyper-based HTTP/1.1 + HTTP/2 + TLS via rustls. Issue #577."

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
perry-ffi.workspace = true
# Phase 4: cross-crate WS upgrade handoff. perry-ext-ws exposes
# `register_external_ws_stream<S>(WebSocketStream<S>) -> i64`; we
# call it from upgrade::handle_websocket_upgrade so 'upgrade' event
# listeners receive a ws_id usable through the rest of the
# perry-ext-ws FFI surface (`js_ws_send` / `js_ws_close` / `js_ws_on`).
perry-ext-ws = { path = "../perry-ext-ws" }
# #4973: raw-socket `'upgrade'` handoff. perry-ext-net exposes
# `adopt_upgraded_tcp_stream(TcpStream) -> i64` so keyless Upgrade requests
# reach JS as a standard net.Socket with nothing written to the wire
# (Node semantics) — see raw_upgrade.rs.
perry-ext-net = { path = "../perry-ext-net" }
hyper = { version = "1.4", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["server", "server-auto", "tokio"] }
h2 = "0.4"
http-body-util = "0.1"
bytes = "1.5"
tokio = { workspace = true }
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["std", "ring", "tls12"] }
rustls-pemfile = "2"
serde_json = "1"
lazy_static = "1.5"
tokio-tungstenite = { workspace = true }

# #4914: SO_REUSEPORT binds for cluster-worker port sharing (unix-only API).
[target.'cfg(unix)'.dependencies]
socket2 = "0.6"

[dev-dependencies]
perry-ffi = { workspace = true, features = ["runtime-link"] }
# #6303: perry-runtime MUST be built here with the same feature set the shipped
# `libperry_runtime.a` / `libperry_stdlib.a` carry (i.e. its `default`). This crate
# is a `staticlib`, so it BUNDLES the perry-runtime rlib objects into
# `libperry_ext_*.a` — and perry links the ext archives BEFORE stdlib/runtime
# (`prefer_well_known_before_stdlib`), so those bundled objects WIN the link for
# every symbol they define. The workspace dep is `default-features = false`, so
# without `"default"` here a per-crate `cargo build -p perry-ext-<x>` (exactly what
# release-packages.yml does in its per-crate loop) bundles a runtime with
# `regex-engine`/`temporal`/... compiled OUT. The dispatchers those features gate
# are exported UNCONDITIONALLY (`js_string_replace_search_dyn`,
# `js_native_call_method`, ...) with the feature-gated logic `#[cfg]`-ed out of the
# BODY — so the degraded copy silently ToString-coerces a RegExp argument and
# searches for it literally instead of matching it (str.replace(re, fn) never fires
# its callback). Keep `"default"` in lock-step with perry-runtime's default feature
# list; `manifest_ext_runtime_features.rs` guards it.
perry-runtime = { workspace = true, features = ["default", "external-ws-symbols"] }
