[package]
name = "perry-ext-mongodb"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native bindings for npm `mongodb` — uses only `perry-ffi`. Async via the mongodb crate bridged through spawn_blocking + JsPromise + tokio::Handle::current().block_on."

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
perry-ffi.workspace = true
mongodb = { version = "3.7", default-features = false, features = ["bson-3", "compat-3-3-0", "rustls-tls", "dns-resolver"] }
bson = { version = "3.1", features = ["serde"] }
tokio = { workspace = true }
futures-util = "0.3"
serde_json = "1"

[dev-dependencies]
perry-ffi = { workspace = true, features = ["runtime-link"] }
