[package]
name = "perry-ext-mysql2"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native bindings for npm `mysql2` (MySQL client) — uses only `perry-ffi`. Async via `sqlx::mysql` bridged through spawn_blocking + JsPromise + tokio::Handle::current().block_on. Connection + pool + per-pool-connection surfaces."

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
perry-ffi.workspace = true
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "mysql", "chrono"] }
tokio = { workspace = true }
chrono = "0.4"

[dev-dependencies]
perry-ffi = { workspace = true, features = ["runtime-link"] }
