[package]
name = "perry-ext-mysql2"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native bindings for npm `mysql2` (MySQL client) — uses only `perry-ffi`. Async via `sqlx::mysql` bridged through spawn_blocking + JsPromise + tokio::Handle::current().block_on. Connection + pool + per-pool-connection surfaces."

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
perry-ffi.workspace = true
# `mysql-rsa` enables the RSA public-key auth exchange MySQL 8's default
# `caching_sha2_password` / `sha256_password` need over a NON-TLS connection.
# Without it every query against such a server fails at connect with
# "RSA auth backend disabled" — which broke `pool.execute`/`query` (e.g. an
# Auth.js credentials `authorize` DB lookup, surfaced as a CallbackRouteError).
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "mysql", "mysql-rsa", "chrono"] }
tokio = { workspace = true }
chrono = "0.4"

[dev-dependencies]
perry-ffi = { workspace = true, features = ["runtime-link"] }
