[package]
name = "perry-ext-ratelimit"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native bindings for npm `rate-limiter-flexible` — uses only `perry-ffi`. Token-bucket rate limiting via `governor`. Sync + spawn_blocking-async."

[lints]
workspace = true

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
perry-ffi.workspace = true
governor = "0.10"

[dev-dependencies]
perry-ffi = { workspace = true, features = ["runtime-link"] }
